[metadata]
name = lychee-fuse
version = attr: __version__
author = Quentin Duchemin
author_email = quentinduchemin@tuta.io
description = FUSE-based filesystem for Lychee, a photo management tool.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Chostakovitch/lychee-fuse
keywords = lychee, fuse
license = AGPL-3.0
classifiers =
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3
    Topic :: System :: Filesystems
    Development Status :: 3 - Alpha

[options]
zip_safe = False
include_package_data = True
packages = .
scripts = lychee_fuse.py
python_requires=>=3.5
install_requires =
    fuse-python>=1.0.4
    pychee>=0.1
    configparser
